--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,7 +2,7 @@ name: KRL Timetable Scraper
 
 on:
   schedule:
-    - cron: '*10 * * * *' 
+    - cron: '*/10 * * * *' 
   workflow_dispatch:  
 
 jobs:
