--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,8 +2,8 @@ name: KRL Timetable Scraper
 
 on:
   schedule:
-    - cron: '*/10 * * * *'  # Run every 10 minutes
-  workflow_dispatch:  # Allow manual trigger
+    - cron: '*/10 * * * *'
+  workflow_dispatch:
 
 jobs:
   scrape:
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        fetch-depth: 0  # Fetch all history for git operations
+        fetch-depth: 0
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -22,22 +22,29 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests
+        pip install requests urllib3==2.0.7 retry
     
     - name: Run scraper
       run: |
-        # Run the scraper
-        python scraper.py
+        # Add retry mechanism for network issues
+        for i in {1..3}; do
+          echo "Attempt $i of 3"
+          if python scraper.py; then
+            break
+          fi
+          sleep 30
+        done
         
-        # If there's an existing GTFS.zip, rename it with timestamp
-        if [ -f "GTFS.zip" ] && [ -f "previous_GTFS.zip" ]; then
-          timestamp=$(date -r previous_GTFS.zip "+%Y%m%d_%H%M")
-          mv previous_GTFS.zip "archive/GTFS_${timestamp}.zip"
-        fi
-        
-        # Move current GTFS.zip to previous
+        # Process files only if scraper succeeded
         if [ -f "GTFS.zip" ]; then
+          if [ -f "GTFS.zip" ] && [ -f "previous_GTFS.zip" ]; then
+            timestamp=$(date -r previous_GTFS.zip "+%Y%m%d_%H%M")
+            mv previous_GTFS.zip "archive/GTFS_${timestamp}.zip"
+          fi
           mv GTFS.zip previous_GTFS.zip
+        else
+          echo "Scraper failed to generate GTFS.zip"
+          exit 1
         fi
     
     - name: Configure Git
