--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -23,7 +23,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests urllib3==2.0.7 retry
-    
     - name: Run scraper
       run: |
         # Add retry mechanism for network issues
@@ -51,6 +50,7 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
+        git pull
     
     - name: Commit and push changes
       run: |
