--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test API Connection
+name: Test API Connection via Tor
 
 on:
   workflow_dispatch:  # Allows manual trigger
@@ -11,15 +11,18 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set Up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.9"
+      - name: Install Tor
+        run: |
+          sudo apt update
+          sudo apt install -y tor
+          echo "SocksPort 9050" | sudo tee -a /etc/tor/torrc
+          sudo systemctl restart tor
+          sleep 5  # Wait for Tor to start
 
       - name: Install Dependencies
-        run: pip install requests
+        run: pip install requests[socks]
 
-      - name: Run API Test
+      - name: Run API Test via Tor
         run: |
           import requests
 
@@ -30,8 +33,14 @@ jobs:
               "TRAIN_SCHEDULE_API": "https://api-partner.krl.co.id/krl-webs/v1/schedule-train"
           }
 
-          # Authorization Token (Replace with a valid token)
-          AUTH_TOKEN = "Bearer ${{ secrets.AUTH_TOKEN }}"
+          # Authorization Token (Stored in GitHub Secrets)
+          AUTH_TOKEN = "Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJhdWQiOiIzIiwianRpIjoiMDYzNWIyOGMzYzg3YTY3ZTRjYWE4YTI0MjYxZGYwYzIxNjYzODA4NWM2NWU4ZjhiYzQ4OGNlM2JiZThmYWNmODU4YzY0YmI0MjgyM2EwOTUiLCJpYXQiOjE3MjI2MTc1MTQsIm5iZiI6MTcyMjYxNzUxNCwiZXhwIjoxNzU0MTUzNTE0LCJzdWIiOiI1Iiwic2NvcGVzIjpbXX0.Jz_sedcMtaZJ4dj0eWVc4_pr_wUQ3s1-UgpopFGhEmJt_iGzj6BdnOEEhcDDdIz-gydQL5ek0S_36v5h6P_X3OQyII3JmHp1SEDJMwrcy4FCY63-jGnhPBb4sprqUFruDRFSEIs1cNQ-3rv3qRDzJtGYc_bAkl2MfgZj85bvt2DDwBWPraZuCCkwz2fJvox-6qz6P7iK9YdQq8AjJfuNdl7t_1hMHixmtDG0KooVnfBV7PoChxvcWvs8FOmtYRdqD7RSEIoOXym2kcwqK-rmbWf9VuPQCN5gjLPimL4t2TbifBg5RWNIAAuHLcYzea48i3okbhkqGGlYTk3iVMU6Hf_Jruns1WJr3A961bd4rny62lNXyGPgNLRJJKedCs5lmtUTr4gZRec4Pz_MqDzlEYC3QzRAOZv0Ergp8-W1Vrv5gYyYNr-YQNdZ01mc7JH72N2dpU9G00K5kYxlcXDNVh8520-R-MrxYbmiFGVlNF2BzEH8qq6Ko9m0jT0NiKEOjetwegrbNdNq_oN4KmHvw2sHkGWY06rUeciYJMhBF1JZuRjj3JTwBUBVXcYZMFtwUAoikVByzKuaZZeTo1AtCiSjejSHNdpLxyKk_SFUzog5MOkUN1ktAhFnBFoz6SlWAJBJIS-lHYsdFLSug2YNiaNllkOUsDbYkiDtmPc9XWc"
+
+          # Tor Proxy
+          PROXIES = {
+              "http": "socks5h://127.0.0.1:9050",
+              "https": "socks5h://127.0.0.1:9050"
+          }
 
           HEADERS = {
               "User-Agent": "Mozilla/5.0",
@@ -40,9 +49,9 @@ jobs:
           }
 
           def test_api(endpoint_name, url):
-              print(f"🔄 Testing {endpoint_name}...")
+              print(f"🔄 Testing {endpoint_name} via Tor...")
               try:
-                  response = requests.get(url, headers=HEADERS, timeout=15)
+                  response = requests.get(url, headers=HEADERS, proxies=PROXIES, timeout=20)
                   if response.status_code == 200:
                       print(f"✅ {endpoint_name}: SUCCESS (Status {response.status_code})")
                   else:
